small refactoring to use best practises