@@ -73,6 +73,7 @@ import org.bukkit.Particle;
 import org.bukkit.World;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.entity.Player;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
@@ -94,6 +95,9 @@ import static net.kyori.adventure.text.Component.text;
 import static net.kyori.adventure.text.format.NamedTextColor.*;
 
 public final class PlotUtils {
+    private PlotUtils() {}
+
+    private static final String MSG_LINE = "--------------------------";
 
     /**
      * Returns the plot that the player is currently standing on or next to.
@@ -113,19 +117,19 @@ public final class PlotUtils {
                 if (statuses == null) return plot;
                 for (Status status : statuses) if (status == plot.getStatus()) return plot;
                 return null;
-            } else if (CityPlotWorld.isCityPlotWorld(worldName)) {
+            } else if (PlotWorld.isCityPlotWorld(worldName)) {
                 int cityID = Integer.parseInt(worldName.substring(2));
                 List<Plot> plots = Plot.getPlots(cityID, statuses);
 
                 if (plots.isEmpty()) return null;
-                if (plots.size() == 1) return plots.get(0);
+                if (plots.size() == 1) return plots.getFirst();
 
                 // Find the plot in the city world that is closest to the player
                 Location playerLoc = builder.getPlayer().getLocation().clone();
                 Vector3 playerVector = Vector3.at(playerLoc.getX(), playerLoc.getY(), playerLoc.getZ());
 
                 double distance = 100000000;
-                Plot chosenPlot = plots.get(0);
+                Plot chosenPlot = plots.getFirst();
                 for (Plot plot : plots)
                     if (plot.getPlotType() == PlotType.CITY_INSPIRATION_MODE && plot.getCenter().withY((int) playerVector.y()).distance(playerVector.toBlockPoint()) < distance) {
                         distance = plot.getCenter().distance(playerVector.toBlockPoint());
@@ -181,7 +185,7 @@ public final class PlotUtils {
     }
 
     public static boolean isPlotWorld(World world) {
-        return PlotSystem.DependencyManager.getMultiverseCore().getMVWorldManager().isMVWorld(world) && (OnePlotWorld.isOnePlotWorld(world.getName()) || CityPlotWorld.isCityPlotWorld(world.getName()));
+        return PlotSystem.DependencyManager.getMultiverseCore().getMVWorldManager().isMVWorld(world) && (PlotWorld.isOnePlotWorld(world.getName()) || PlotWorld.isCityPlotWorld(world.getName()));
     }
 
 
@@ -244,7 +248,7 @@ public final class PlotUtils {
                             try {
                                 return FTPManager.uploadSchematic(FTPManager.getFTPUrl(plot.getCity().getCountry().getServer(), plot.getCity().getID()), finishedSchematicFile);
                             } catch (SQLException | URISyntaxException ex) {
-                                PlotSystem.getPlugin().getComponentLogger().error(text("A SQL error occurred!"), ex);
+                                Utils.logSqlException(ex);
                             }
                             return null;
                         });
@@ -312,9 +316,9 @@ public final class PlotUtils {
                     }
                 }
             } catch (SQLException ex) {
-                PlotSystem.getPlugin().getComponentLogger().error(text("A SQL error occurred!"), ex);
+                Utils.logSqlException(ex);
             }
-        }, 0L, 20 * 60 * 60); // Check every hour
+        }, 0L, 20 * 60 * 60L); // Check every hour
     }
 
     public static void syncPlotSchematicFiles() {
@@ -329,15 +333,15 @@ public final class PlotUtils {
                         plots.forEach(Plot::getOutlinesSchematic);
                     }
                 } catch (SQLException ex) {
-                    PlotSystem.getPlugin().getComponentLogger().error(text("A SQL error occurred!"), ex);
+                    Utils.logSqlException(ex);
                 }
             }), 0L, 20 * interval);
         }
     }
 
-    public static boolean plotExists(int ID) {
+    public static boolean plotExists(int id) {
         try (ResultSet rs = DatabaseConnection.createStatement("SELECT COUNT(id) FROM plotsystem_plots WHERE id = ?")
-                .setValue(ID).executeQuery()) {
+                .setValue(id).executeQuery()) {
 
             if (rs.next() && rs.getInt(1) > 0) {
                 DatabaseConnection.closeResultSet(rs);
@@ -346,12 +350,13 @@ public final class PlotUtils {
 
             DatabaseConnection.closeResultSet(rs);
         } catch (SQLException ex) {
-            PlotSystem.getPlugin().getComponentLogger().error(text("A SQL error occurred!"), ex);
+            Utils.logSqlException(ex);
         }
         return false;
     }
 
     public static final class Actions {
+        private Actions() {}
         public static void submitPlot(Plot plot) throws SQLException {
             plot.setStatus(Status.unreviewed);
 
@@ -446,7 +451,7 @@ public final class PlotUtils {
                             dPlot.setPlotType(PlotType.LOCAL_INSPIRATION_MODE);
                         }
                     } catch (SQLException ex) {
-                        PlotSystem.getPlugin().getComponentLogger().error(text("A SQL error occurred!"), ex);
+                        Utils.logSqlException(ex);
                         throw new CompletionException(ex);
                     }
                 }).join();
@@ -457,20 +462,21 @@ public final class PlotUtils {
             return true;
         }
 
-        public static boolean deletePlot(Plot plot) throws SQLException {
+        public static boolean deletePlot(Plot plot) {
             if (abandonPlot(plot)) {
                 try {
                     CompletableFuture.runAsync(() -> {
                         try {
                             Server plotServer = plot.getCity().getCountry().getServer();
 
-                            Files.deleteIfExists(Paths.get(PlotUtils.getDefaultSchematicPath(), String.valueOf(plotServer.getID()), "finishedSchematics", String.valueOf(plot.getCity().getID()), plot.getID() + ".schematic"));
-                            Files.deleteIfExists(Paths.get(PlotUtils.getDefaultSchematicPath(), String.valueOf(plotServer.getID()), String.valueOf(plot.getCity().getID()), plot.getID() + ".schematic"));
+                            String schemFileEnding = ".schematic";
+                            Files.deleteIfExists(Paths.get(PlotUtils.getDefaultSchematicPath(), String.valueOf(plotServer.getID()), "finishedSchematics", String.valueOf(plot.getCity().getID()), plot.getID() + schemFileEnding));
+                            Files.deleteIfExists(Paths.get(PlotUtils.getDefaultSchematicPath(), String.valueOf(plotServer.getID()), String.valueOf(plot.getCity().getID()), plot.getID() + schemFileEnding));
                             Files.deleteIfExists(Paths.get(PlotUtils.getDefaultSchematicPath(), String.valueOf(plotServer.getID()), String.valueOf(plot.getCity().getID()), plot.getID() + "-env.schematic"));
 
                             if (plotServer.getFTPConfiguration() != null) {
-                                FTPManager.deleteSchematic(FTPManager.getFTPUrl(plotServer, plot.getCity().getID()), plot.getID() + ".schematic");
-                                FTPManager.deleteSchematic(FTPManager.getFTPUrl(plotServer, plot.getCity().getID()).replaceFirst("finishedSchematics/", ""), plot.getID() + ".schematic");
+                                FTPManager.deleteSchematic(FTPManager.getFTPUrl(plotServer, plot.getCity().getID()), plot.getID() + schemFileEnding);
+                                FTPManager.deleteSchematic(FTPManager.getFTPUrl(plotServer, plot.getCity().getID()).replaceFirst("finishedSchematics/", ""), plot.getID() + schemFileEnding);
                                 FTPManager.deleteSchematic(FTPManager.getFTPUrl(plotServer, plot.getCity().getID()).replaceFirst("finishedSchematics/", ""), plot.getID() + "-env.schematic");
                             }
 
@@ -492,6 +498,7 @@ public final class PlotUtils {
     }
 
     public static final class Cache {
+        private Cache() {}
         private static final HashMap<UUID, List<Plot>> cachedInProgressPlots = new HashMap<>();
 
         public static void clearCache() {
@@ -507,7 +514,7 @@ public final class PlotUtils {
                 try {
                     cachedInProgressPlots.put(builder.getUUID(), Plot.getPlots(builder, Status.unfinished));
                 } catch (SQLException ex) {
-                    PlotSystem.getPlugin().getComponentLogger().error(text("A SQL error occurred!"), ex);
+                    Utils.logSqlException(ex);
                     return new ArrayList<>();
                 }
             }
@@ -515,20 +522,21 @@ public final class PlotUtils {
             return cachedInProgressPlots.get(builder.getUUID());
         }
 
-        public static HashMap<UUID, List<Plot>> getCachedInProgressPlots() {
+        public static Map<UUID, List<Plot>> getCachedInProgressPlots() {
             return cachedInProgressPlots;
         }
     }
 
     public static final class Effects {
+        private Effects() {}
         public static final int CACHE_UPDATE_TICKS = 20 * 60;
         private static int time;
 
-        private static boolean ParticleAPIEnabled = false;
+        private static boolean particleAPIEnabled = false;
         private static Particles_1_8 particles;
 
         public static void loadParticleNativeAPI() {
-            ParticleAPIEnabled = PlotSystem.DependencyManager.isParticleNativeAPIEnabled();
+            particleAPIEnabled = PlotSystem.DependencyManager.isParticleNativeAPIEnabled();
 
             // get API
             ParticleNativeAPI api = ParticleNativePlugin.getAPI();
@@ -567,19 +575,18 @@ public final class PlotUtils {
                     if (plots.isEmpty()) continue;
 
                     for (Plot plot : plots) {
-                        if (!plot.getWorld().getWorldName().equals(player.getWorld().getName()))
+                        if ((!plot.getWorld().getWorldName().equals(player.getWorld().getName())) ||
+                                (!plot.getPlotOwner().getPlotTypeSetting().hasEnvironment() || plot.getVersion() <= 2)) {
                             continue;
-
-                        if (!plot.getPlotOwner().getPlotTypeSetting().hasEnvironment() || plot.getVersion() <= 2)
-                            continue;
+                        }
 
                         List<BlockVector2> points = plot.getBlockOutline();
 
                         for (BlockVector2 point : points)
-                            if (point.distanceSq(playerPos2D) < 50 * 50)
-                                if (!ParticleAPIEnabled)
+                            if (point.distanceSq(playerPos2D) < 50 * 50) {
+                                if (!particleAPIEnabled) {
                                     player.spawnParticle(Particle.FLAME, point.x(), player.getLocation().getY() + 1, point.z(), 1, 0.0, 0.0, 0.0, 0);
-                                else {
+                                } else {
                                     Location loc = new Location(player.getWorld(), point.x(), player.getLocation().getY() + 1, point.z());
                                     // create a particle packet
                                     Object packet = particles.FLAME().packet(true, loc);
@@ -587,15 +594,17 @@ public final class PlotUtils {
                                     // send this packet to player
                                     particles.sendPacket(player, packet);
                                 }
+                            }
                     }
                 }
             } catch (SQLException | IOException ex) {
-                PlotSystem.getPlugin().getComponentLogger().error(text("A SQL error occurred!"), ex);
+                Utils.logSqlException(ex);
             }
         }
     }
 
     public static final class ChatFormatting {
+        private ChatFormatting() {}
         public static void sendLinkMessages(AbstractPlot plot, Player player) {
             Bukkit.getScheduler().runTaskAsynchronously(PlotSystem.getPlugin(), () -> {
                 Component[] tc = new Component[3];
@@ -644,14 +653,14 @@ public final class PlotUtils {
                     PlotSystem.getPlugin().getComponentLogger().error(text(ex.getMessage()), ex);
                 }
 
-                player.sendMessage(text("--------------------------", DARK_GRAY));
+                player.sendMessage(text(MSG_LINE, DARK_GRAY));
                 if (coords != null) player.sendMessage(text("Coords: ", GRAY).append(coords));
                 player.sendMessage(tc[0]);
                 player.sendMessage(tc[1]);
                 player.sendMessage(tc[2]);
-                player.sendMessage(text("--------------------------", DARK_GRAY));
+                player.sendMessage(text(MSG_LINE, DARK_GRAY));
 
-                if (plot instanceof Plot) sendGroupTipMessage((Plot) plot, player);
+                if (plot instanceof Plot p) sendGroupTipMessage(p, player);
             });
         }
 
@@ -664,15 +673,15 @@ public final class PlotUtils {
                             .hoverEvent(text(LangUtil.getInstance().get(player, LangPaths.Plot.MEMBERS)));
 
                     player.sendMessage(tc);
-                    player.sendMessage(text("--------------------------", DARK_GRAY));
+                    player.sendMessage(text(MSG_LINE, DARK_GRAY));
                 }
             } catch (SQLException ex) {
                 PlotSystem.getPlugin().getComponentLogger().error(text(ex.getMessage()), ex);
             }
         }
 
-        public static void sendFeedbackMessage(List<Plot> plots, Player player) throws SQLException {
-            player.sendMessage(text("--------------------------", DARK_GRAY));
+        public static void sendFeedbackMessage(@NotNull List<Plot> plots, @NotNull Player player) {
+            player.sendMessage(text(MSG_LINE, DARK_GRAY));
             for (Plot plot : plots) {
                 player.sendMessage(text("» ", DARK_GRAY).append(text(LangUtil.getInstance().get(player, LangPaths.Message.Info.REVIEWED_PLOT, String.valueOf(plot.getID())), GREEN)));
 
@@ -685,7 +694,7 @@ public final class PlotUtils {
                     player.sendMessage(empty());
                 }
             }
-            player.sendMessage(text("--------------------------", DARK_GRAY));
+            player.sendMessage(text(MSG_LINE, DARK_GRAY));
             player.playSound(player.getLocation(), Utils.SoundUtils.FINISH_PLOT_SOUND, 1, 1);
         }
 
